hw5/deployment2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment2
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-app2
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "150m"
          limits:
            memory: "328Mi"
            cpu: "250m"
        readinessProbe:
          httpGet:
            path: /account/register
            port: 3000
          initialDelaySeconds: 60
          timeoutSeconds: 15
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /account/register
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 60
          timeoutSeconds: 15
        #volumeMounts:
        #- name: data
        #  mountPath: /var/lib/postgresql/data
      #restartPolicy: Always
      #volumes:
      #- name: data
      #  persistentVolumeClaim:
      #    claimName: webdav
