hw5/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: my-app
  type: ClusterIP
