hw5/service2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-service2
spec:
  ports:
  - port: 8080
    targetPort: 3000
  selector:
    app: my-app2
  type: ClusterIP
